# coq-proba

./: .gitignore  .gitmodules  .travis.yml  Makefile  README  _CoqProject  awk.Makefile  coq-proba.opam  opam
lean-experiments/stumps-learnable/: README.md  leanpkg.toml
lean-experiments/stumps-learnable/relax/relax/: __init__.py  (+4 more)
theories/basic/: Reals_ext.v  Series_Ext.v  base.v  bigop_ext.v  classic_proof_irrel.v  exp_ext.v  monad.v  nify.v  order.v  seq_ext.v  stdpp_ext.v  sval.v
theories/idxval/: approx_counter.v  extrema.v  idist_pidist_pair.v  irrel_coupling_alt.v  irrel_equiv.v  ival.v  ival_dist.v  ival_pair.v  markov.v  pidist_pair.v  pidist_post_cond.v  pidist_singleton.v  pival.v  pival_dist.v  subset_coupling.v  uniform.v
theories/idxval/finite/: fin_extrema.v  fin_idist_pair.v  fin_ival.v  fin_ival_dist.v  fin_ival_pair.v  pidist_fin_singleton.v
theories/measure/: borel.v  completion.v  convergence.v  dependent_sum.v  dynkin.v  integral.v  integral_prelim.v  isomorphism.v  lebesgue_measure.v  measurable_space.v  measure_of_density.v  measures.v  outer_measure.v  product.v  pushforward.v  sets.v  sigma_algebra.v
theories/monad/: bst.v  bst_correct.v  bst_height.v  counter.v  counter_overflow.v  leader.v  leader_cost.v  max_triangle.v  monad.v  monad_cost.v  monad_cost_hoare.v  monad_hoare.v  monad_par.v  monad_par_hoare.v  par_quicksort.v  par_quicksort_correct.v  par_quicksort_cost.v  permutation.v  quicksort.v  quicksort_correct.v  quicksort_cost.v
theories/monad/disc/: monad.v
theories/monad/finite/: bst.v  bst_correct.v  bst_height.v  counter.v  counter_overflow.v  leader.v  leader_cost.v  max_triangle.v  monad.v  monad_cost.v  monad_cost_hoare.v  monad_hoare.v  monad_par.v  monad_par_hoare.v  par_quicksort.v  par_quicksort_correct.v  par_quicksort_cost.v  permutation.v  quicksort.v  quicksort_correct.v  quicksort_cost.v  toy.v
theories/monad/idxval/: approx_counter.v  extrema.v  idist_pidist_pair.v  irrel_coupling_alt.v  irrel_equiv.v  ival.v  ival_dist.v  ival_pair.v  markov.v  pidist_pair.v  pidist_post_cond.v  pidist_singleton.v  pival.v  pival_dist.v  subset_coupling.v  uniform.v
theories/prob/: bernoulli.v  chernoff.v  countable.v  dep_prod.v  double.v  finite.v  indep.v  markov.v  prob.v  rearrange.v  stochastic_order.v  uniform.v
theories/rec/: counter_rec.v  decreasing_rec.v  karp.v  leader_rec.v  log_rec.v  quickselect_rec.v  quicksort_rec.v  rec_convert.v  span2.v  work2.v
(+47 files in other folders)
