opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/jtassarotti/coq-proba"
dev-repo: "git+https://github.com/jtassarotti/coq-proba.git"
bug-reports: "https://github.com/jtassarotti/coq-proba/issues"
license: "Apache-2.0"

synopsis: "A probability theory library for Coq"

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" {="8.12.0"}
  "coq-coquelicot" {>= "3.0.2" & <= "3.1.0"}
  "coq-interval" {= "4.0.0"}
  "coq-stdpp" {(>= "1.4.0") | (= "dev")}
  "coq-mathcomp-ssreflect" {= "1.11.0"}
  "coq-flocq" {= "3.3.1"}
]

tags: [
  "category:Computer Science/Data Types and Data Structures"
  "keyword:probability"
  "keyword:monad"
  "keyword:measure theory"
  "logpath:discprob"
]
authors: [
  "Joseph Tassarotti"
]
