opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/jtassarotti/coq-proba"
dev-repo: "git+https://github.com/jtassarotti/coq-proba.git"
bug-reports: "https://github.com/jtassarotti/coq-proba/issues"
license: "Apache-2.0"

synopsis: "A probability theory library for Coq"

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" {="8.15.2"}
  "coq-coquelicot" {="3.2.0"}
  "coq-flocq" {="4.1.0"}
  "coq-interval" {="4.5.2"}
  "coq-mathcomp-ssreflect" {="1.15.0"}
  "coq-stdpp" {="1.8.0"}
]

tags: [
  "category:Computer Science/Data Types and Data Structures"
  "keyword:probability"
  "keyword:monad"
  "keyword:measure theory"
  "logpath:discprob"
]
authors: [
  "Joseph Tassarotti"
]
